src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__a_global_variables_generates_in_separate_global_variables.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%main = type {}

@gX = global i16 0
@gY = global i8 0
@main_instance = global %main zeroinitializer

define void @main(%main* %0) {
entry:
  ret void
}

