src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__array_of_struct_initialization_in_body.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: res
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%mainProg = type { [2 x %MyStruct], i32, i32 }
%MyStruct = type { i32, i32 }

@mainProg_instance = global %mainProg zeroinitializer
@.const_init = private unnamed_addr constant [2 x %MyStruct] [%MyStruct { i32 10, i32 20 }, %MyStruct { i32 30, i32 40 }]

define void @mainProg(ptr %0) {
entry:
  %arr = getelementptr inbounds nuw %mainProg, ptr %0, i32 0, i32 0
  %x = getelementptr inbounds nuw %mainProg, ptr %0, i32 0, i32 1
  %y = getelementptr inbounds nuw %mainProg, ptr %0, i32 0, i32 2
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %arr, ptr align [filtered] @.const_init, i64 ptrtoint (ptr getelementptr ([2 x %MyStruct], ptr null, i32 1) to i64), i1 false)
  %tmpVar = getelementptr inbounds [2 x %MyStruct], ptr %arr, i32 0, i32 0
  %a = getelementptr inbounds nuw %MyStruct, ptr %tmpVar, i32 0, i32 0
  %load_a = load i32, ptr %a, align [filtered]
  store i32 %load_a, ptr %x, align [filtered]
  %tmpVar1 = getelementptr inbounds [2 x %MyStruct], ptr %arr, i32 0, i32 1
  %b = getelementptr inbounds nuw %MyStruct, ptr %tmpVar1, i32 0, i32 1
  %load_b = load i32, ptr %b, align [filtered]
  store i32 %load_b, ptr %y, align [filtered]
  ret void
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #0

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
