src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__arrays_are_generated.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@MyArray__init = addrspace(4) global [10 x i16] zeroinitializer
@__global_y__init = addrspace(4) global [6 x float] zeroinitializer
@x = global [10 x i16] zeroinitializer
@y = global [6 x float] zeroinitializer

