src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__arrays_with_global_const_size_are_generated.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@THREE = global i16 3
@ZERO = global i16 0
@LEN = global i16 9
@x = global [10 x i16] zeroinitializer
@y = global [11 x i32] zeroinitializer
@z = global [19 x i8] zeroinitializer
@zz = global [10 x [10 x i8]] zeroinitializer
@zzz = global [10 x [8 x i8]] zeroinitializer

